src/objects/CBCalculationRule__c.object
<CustomObject>
    <fields>
        <fullName>CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>CBAccount__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBBudgetYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>CBDivision__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Folder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CBFolder__c.FolderType__c</field>
                <operation>equals</operation>
                <value>Calculation Rule</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CBFolder__c</referenceTo>
        <relationshipLabel>CB Calculation Rule Folders</relationshipLabel>
        <relationshipName>CB_CR_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBScenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Scenario</label>
        <referenceTo>CBScenario__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>CBVariable1__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>CBVariable2__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>CBVariable3__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one-to-one</fullName>
                    <default>true</default>
                    <label>one-to-one</label>
                </value>
                <value>
                    <fullName>many-to-one</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NFL1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFL1</label>
        <referenceTo>CBNonFinancialLibrary__c</referenceTo>
        <relationshipLabel>CB Calculation Rules</relationshipLabel>
        <relationshipName>CB_Calculation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodShift__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Shift</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResultName__c</fullName>
        <defaultValue>&apos;Auto Line&apos;</defaultValue>
        <label>Result Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceChildFilter__c</fullName>
        <label>Source Child Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SourceParentFilter__c</fullName>
        <label>Source Parent Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copyAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copyBudgetYear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyBudgetYear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copyDivision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyDivision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copyScenario__c</fullName>
        <defaultValue>true</defaultValue>
        <label>copyScenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copyVariable1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyVariable1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copyVariable2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyVariable2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copyVariable3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copyVariable3</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Calculation Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Calculation Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Calculation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CalcRuleType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CBFolder__c &lt;&gt; null,NOT(ISPICKVAL(CBFolder__r.FolderType__c, &apos;Calculation Rule&apos;)))</errorConditionFormula>
        <errorDisplayField>CBFolder__c</errorDisplayField>
        <errorMessage>Folder type must be &apos;Calculation Rule&apos;</errorMessage>
    </validationRules>
</CustomObject>